--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": "20.x"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
