--- a/react-app/package.json
+++ b/react-app/package.json
@@ -7,6 +7,7 @@
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@stripe/stripe-js": "^6.1.0",
     "axios": "^1.7.9",
+    "backend": "file:..",
     "cra-template": "1.2.0",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
